fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,8 @@ h1 {
   border-radius: 20px;
   opacity: 0.6;
   display: inline-flex;
-  height: 150px;
-  width: 200px;
+  height: 200px;
+  width: 250px;
 }
 
 .errorMsg {
@@ -76,4 +76,9 @@ h1 {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+.wrapper {
+  width: 65%;
+  margin: 0 auto;
 }
